--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="C:\Users\LENOVO22SEP023\Desktop\Yönetim Bilişim Sistemleri\favicon-32x32.png" rel="icon">
+    <link href="favicon-32x32.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
